--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,21 @@
   </head>
 
   <body>
+    <header>
+      <div class="containar">
+        <div class="logo">
+          <%= image_tag('logo.png') %>
+        </div>
+        <nav>
+          <ul>
+            <li><%= link_to "About", about_path, class: 'menu' %></li>
+            <li><%= link_to "商品一覧", about_path, class: 'menu' %></li>
+            <li><%= link_to "新規登録", about_path, class: 'menu' %></li>
+            <li><%= link_to "ログイン", about_path, class: 'menu' %></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <%= yield %>
   </body>
 </html>
