--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,2 +1,38 @@
-<h1>Admin::Items#new</h1>
-<p>Find me in app/views/admin/items/new.html.erb</p>
+<main>
+  <h1>商品新規登録</h1>
+  <div class="form">
+    <%= form_with model: @admin_item_image, local:true do |f| %>
+    
+    <div class="form_group">
+      <%= f.label :image, "商品画像", class: 'label' %>
+      <%= f.attachment_field :image %>
+    </div>
+    <div class="form_group">
+      <%= f.label :name, "商品名", class: 'label' %>
+      <%= f.text_field :name %>
+    </div>
+    <div class="form_group">
+      <%= f.label :introduction, "商品説明", class: 'label' %>
+      <%= f.text_area :introduction %>
+    </div>
+    <div class="form_group">
+      <%= f.label :genre_id, "ジャンル", class: 'label' %>
+      <%= f.select :genre_id, {'ケーキ':1, '焼き菓子':2}, { include_blank: '選択してください'} %>
+    </div>
+    <div class="form_group">
+      <%= f.label :price, "税抜価格", class: 'label' %>
+      <%= f.text_field :price %>円
+    </div>
+    <div class="form_group">
+      <p>販売ステータス</p>
+      <%= f.radio_button :is_active, :on_sale %>
+      <%= f.label :is_active, "販売中", {value: :"0", style: "display: inline-block;"} %>
+      <%= f.radio_button :is_active, :off_sale %>
+      <%= f.label :is_active, "販売停止中", {value: :"1", style: "display: inline-block;"} %>
+    </div>
+    <div class="submit-button">
+      <%= f.submit "新規登録" %>
+    </div>
+    <% end %>
+  </div>
+</main>
